# check-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
Formula/: check-cli.rb
src/check_cli/: __init__.py  display.py  history.py  main.py  speedtest.py
tests/: __init__.py  test_check_cli.py
