[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "check-cli"
version = "1.0.0"
description = "A beautiful CLI tool to check your internet speed, latency, jitter, and more"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = [
    "internet",
    "speed",
    "test",
    "cli",
    "network",
    "bandwidth",
    "latency",
    "jitter",
    "ping"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
dependencies = [
    "httpx[http2]>=0.24.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "platformdirs>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
check = "check_cli.main:cli"

[project.urls]
Homepage = "https://github.com/yourusername/check-cli"
Documentation = "https://github.com/yourusername/check-cli#readme"
Repository = "https://github.com/yourusername/check-cli"
Issues = "https://github.com/yourusername/check-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/check_cli"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
